Fixed spacing issues in header

--- a/sites/all/themes/debuga_theme1/css/debuga_theme1.css
+++ b/sites/all/themes/debuga_theme1/css/debuga_theme1.css
@@ -46,7 +46,11 @@ hr {
 	list-style-image: none;
 	list-style-type: none;
 	border: 0;
+	margin: 0;
 	}
+#site-header #block-system-main-menu > div.content > ul {
+	margin: 0;
+}
 #site-header ul li {
 	float: left;
 	padding: 0.2em 1.0em 0.8px 1.0em;
@@ -55,6 +59,9 @@ hr {
 	margin:3rem;
 	margin-top:-2.75rem;
 	}
+#site-header .col.col-1-out-of-2.col-3-out-of-4.col-5-out-of-6 {
+	width: 65%;
+}
 #site-header img {
 	float: left;
 	clear: both;
@@ -80,9 +87,6 @@ hr {
 	background-color: #ffffff;
 	}
 #user-account-information-links {
-	margin-top: -2.5rem;
 	float: right;
-	margin-right: 9rem;
 }
 
-	
